@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int main( int, char **argv, char **envp ) @ 0
